--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -26,5 +26,16 @@
 <div id="view_list_viewport"></div> 
 
 
+<fieldset>
+<legend> 
+By Domain
+</legend>  
+
+<div id="domain_break_down_chart_loading"></div>
+<div id="domain_break_down_chart" data-width="640" data-height="400" data-title="Total Subscribers: <!-- tmpl_var num_subscribers -->"></div> 
+
+</fieldset> 
+
+
 
 <!-- end view_list_screen.tmpl -->
