--- a/dada/DADA/Template/templates/plugins/tracker/default.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/default.tmpl
@@ -21,15 +21,12 @@
 	<legend>
 	 Tracker Summaries
 	</legend>
+	
+	<div id="show_table_results_loading"><p>&nbsp;</p></div>
+	<div id="show_table_results" style="width:100%; height:325px"></div>
 
-	<div id="show_table_results_loading"></div>		
-	<div id="show_table_results"></div>
-	<!-- 
-	<div id="subscriber_history_img_loading"></div>
-	<div id="subscriber_history_img"> </div> 
-	-->
-	<div id="subscriber_history_chart_loading"></div>
-	<div id="subscriber_history_chart"></div>
+	<div id="subscriber_history_chart_loading"><p>&nbsp;</p></div>
+	<div id="subscriber_history_chart"style="width:100%; height:400px"></div>
 	
 
 </fieldset> 
@@ -60,23 +57,6 @@
 </tr> 
 </table> 
 </fieldset> 
-
-
-
-<fieldset>
-<legend> 
- Current Subscribers by Email Address Domain
-</legend>  
-<!-- 
-	<div id="domain_breakdown_img_loading"></div>
-	<div id="domain_breakdown_img"> </div> 
---> 
-
-<div id="domain_break_down_chart_loading"></div>
-<div id="domain_break_down_chart" data-width="640" data-height="400" data-title="Total Subscribers: <!-- tmpl_var num_subscribers -->"></div> 
-
-</fieldset> 
-
 
 <fieldset> 
 <legend>
