--- a/dada/DADA/Template/templates/list_activity.tmpl
+++ b/dada/DADA/Template/templates/list_activity.tmpl
@@ -8,7 +8,35 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-	
-	<!-- tmpl_include filtered_list_activity_widget.tmpl -->
+<div id="list_activity"></div> 
+
+
+<h1>Subscription Trends</h1> 
+<form>
+	<p>
+	Display the last: 
+	<select id="amount">> 
+		<option value="7">7 days</option>
+		<option value="14">2 weeks</option>
+		<option value="30">1 month</option> 
+		<option value="60">2 months</option>
+		<option value="90">3 months</option>
+		<option  value="183">6 months</option>
+		<option value="365">1 year</option> 
+		<option value="730">2 years</option> 
+		<option value="1095">3 years</option> 
+	</select>
+</p>
+</form>
+<div id="sub_unsub_trends_loading"></div> 
+<div id="sub_unsub_trends"></div> 
+
+
+
+
+<h1>Recent Subscription Activity</h1> 
+<!-- tmpl_include filtered_list_activity_widget.tmpl -->
+
+
 
 <!-- end list_activity --> 
