Re-enabled the Prototype-powered ModalBox stuff as the jQuery version I cobbled together really doesn't work as well. Or look as good. Enabled the jQuery, "noConflict" stuff and ripped some more inline JavaScript out of Dada Mail. Getting close to the finish of this little project!

--- a/dada/DADA/Template/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/DADA/Template/templates/plugins/bounce_handler/default.tmpl
@@ -3,8 +3,8 @@
 	
 		
 	<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler" -->	
-	<!-- tmpl_if comment --><!-- tmpl_set name="load_modalbox" value="1" --><!-- /tmpl_if -->	
-	
+	<!-- tmpl_set name="load_modalbox" value="1" -->
+		
 	<div id="screentitle"> 
 		<div id="screentitlepadding">
 			<!-- tmpl_var title -->
