--- a/dada/DADA/Template/templates/send_email_message_body_help_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_message_body_help_widget.tmpl
@@ -35,7 +35,8 @@
 </ul>
 
 <div style="text-align: center;">
-	<input value="Thanks!" type="button" class="small_button" id="dialog-modal-close" />
+	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
+	<!-- <input value="Thanks!" type="button" class="small_button" id="dialog-modal-close" /> -->
 </div> 
 
 	</div>
