--- a/dada/DADA/Template/templates/send_url_email_message_body_help_widget.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_message_body_help_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin send_url_email_message_body_help_widget.tmpl --> 
 
-<div id="message_body_help">
+<div id="message_body_help" style="display:none">
 
 <h2>
 	Send a Webpage Best Practices:
@@ -44,7 +44,9 @@
 </ul>
 
 <div style="text-align: center;">
-	<input value="Thanks!" id="dialog-modal-close" type="button" class="small_button" />
+	<!-- <input value="Thanks!" id="dialog-modal-close" type="button" class="small_button" /> --> 
+	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
+	
 </div> 
 
 	</div>
