--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -10,29 +10,28 @@
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
-<!-- tmpl_if load_modalbox --> 
-  <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
-<!-- /tmpl_if -->
 
+<!-- Google Visualization -->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
+<!-- jQuery -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+<script>
+	var $jq = jQuery.noConflict();
+</script> 
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
-
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/jquery.tablesorter.js"></script>
-
-
-
-
 <link rel="stylesheet" href="http://localhost/jquery.ui.all.css">
 
+<!-- Google Visualization -->
 <script type="text/javascript">
 	google.load('visualization', '1.1', {'packages':['corechart', 'geochart']});	
 </script>
 
-
-
+<!-- Dada Mail's Admin Javascript -->
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
 
+<!-- WYSIWYG Editors --> 
 <!-- tmpl_if load_wysiwyg_editor --> 
 	<!-- tmpl_if using_fckeditor --> 
 		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js"       type="text/javascript"></script>
@@ -47,6 +46,12 @@
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
 
+<!-- tmpl_if load_modalbox --> 
+	 <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js"></script>
+	<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
+<!-- /tmpl_if -->
 
 
 </head>
