--- a/dada/DADA/Template/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/DADA/Template/templates/plugins/bounce_handler/scorecard.tmpl
@@ -84,7 +84,7 @@
 		   	<tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
 				<td>
 					<p>
-					<a href="<!-- tmpl_var PLUGIN_URL -->?flavor=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;">
+					<a href="<!-- tmpl_var PLUGIN_URL -->?flavor=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;">
 					 <!-- tmpl_var email --></p>
 					</a>
 				</td>
