--- a/dada/DADA/Template/templates/plugins/tracker/message_report.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/message_report.tmpl
@@ -5,6 +5,8 @@
 <!-- tmpl_if chrome --> 
 	
 		<!-- tmpl_set name="title" value="Plugins &#187; Tracker &#187; Message Report" --> 
+		<!-- tmpl_set name="load_modalbox" value="1" -->
+		
 		<div id="screentitle"> 
 			<div id="screentitlepadding">
 				<!-- tmpl_var title --> 
