--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -2,6 +2,7 @@
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Webpage" -->
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
+<!-- tmpl_set name="load_modalbox" value="1" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -67,8 +68,9 @@
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
 	
 	<fieldset> 
-		<legend>Message Body [<a href="#" class="message_body_help">?</a>]</legend>
-
+		<!-- <legend>Message Body [<a href="#" class="message_body_help">?</a>]</legend>-->
+		<legend>Message Body [<a href="#" onclick="Modalbox.show($('message_body_help'), {title: 'Webpage Message Body Help', width: 640, height:325}); return false;">?</a>]</legend>
+		
 
 		<div id="tabs"> 
 
@@ -278,6 +280,7 @@
 <!-- /tmpl_unless -->
 
 </form> 
+<!-- tmpl_include send_url_email_message_body_help_widget.tmpl -->		
 
  
 
