--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -3,6 +3,8 @@
 
 
 <!-- tmpl_set name="title" value="Mail Sending &#187; Sending Preferences" -->
+<!-- tmpl_set name="load_modalbox" value="1" -->
+
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
