Making things look, a little nicer.

--- a/dada/DADA/Template/templates/list_activity.tmpl
+++ b/dada/DADA/Template/templates/list_activity.tmpl
@@ -29,13 +29,13 @@
 </p>
 </form>
 <div id="sub_unsub_trends_loading"></div> 
-<div id="sub_unsub_trends"></div> 
+<div id="sub_unsub_trends" style="width:720px;height:480px"></div> 
 
 
 
 
 <h1>Recent Subscription Activity</h1> 
-<!-- tmpl_include filtered_list_activity_widget.tmpl -->
+	<!-- tmpl_include filtered_list_activity_widget.tmpl -->
 
 
 
