--- a/dada/DADA/Template/templates/list_popup_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_popup_login_form.tmpl
@@ -36,7 +36,7 @@
      your Mailing List:
     </p>
    </td>
-   <td align="right">
+   <td style="text-align:right">
     <p>
      Type in your
      <label for="admin_password">
