--- a/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
+++ b/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
@@ -17,7 +17,7 @@
 	   <table width="100%">
 
 	  <tr>
-	   <td align="right">
+	   <td style="text-align:right">
 	    <p align="right">
 	     <label for="To">
 	      To:
@@ -42,7 +42,7 @@
 	  </tr>
 
 	  <tr>
-	   <td align="right">
+	   <td style="text-align:right">
 	    <p align="right">
 	     <label for="From">
 	      From:
@@ -69,7 +69,7 @@
 	  
 	  
 	  <tr>
-	   <td align="right">
+	   <td style="text-align:right">
 	    <p>
 	     <label for="Reply-To">
 	      Reply-To:
@@ -86,7 +86,7 @@
 	<!-- tmpl_if list_settings.print_errors_to_header -->
 		  
 		  <tr>
-		   <td align="right">
+		   <td style="text-align:right">
 		    <p>
 		     <label for="Errors-To">
 		      Errors-To:
@@ -105,7 +105,7 @@
 	<!-- tmpl_if list_settings.print_return_path_header -->
 		  
 		  <tr>
-		   <td align="right">
+		   <td style="text-align:right">
 		    <p>
 		     <label for="Return-Path">
 		      Return-Path:
@@ -124,7 +124,7 @@
 <!-- tmpl_if priority_popup_menu --> 
 
 	 	 <tr>
-		   <td align="right">
+		   <td style="text-align:right">
 		    <p>
 		     <label>
 		      Priority:
@@ -146,7 +146,7 @@
    <table width="100%">
 
   <tr>
-   <td align="right">
+   <td style="text-align:right">
     <p>
      <label for="Subject">
       Subject:
