--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -21,16 +21,13 @@
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
 <div id="view_list_viewport_loading"></div>
-<div id="view_list_viewport"></div> 
+<div id="view_list_viewport" style="height:425px"></div> 
 
 
-<fieldset>
-<legend> 
-By Domain
-</legend>  
-
+<h1>Breakdown by Domain</h1>
+<p>Selecting a domain will run a search, on the table above.</p> 
 <div id="domain_break_down_chart_loading"></div>
-<div id="domain_break_down_chart" data-width="640" data-height="400" data-title="Total Subscribers: <!-- tmpl_var num_subscribers -->"></div> 
+<div id="domain_break_down_chart" data-width="720" data-height="400"></div> 
 
 </fieldset> 
 
