--- a/dada/DADA/Template/templates/view_list_slide_nav_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_slide_nav_widget.tmpl
@@ -31,7 +31,7 @@
 	
 </td> 
 
-<td align="right"> 
+<td style="text-align:right">
 
 <strong><a href="#" class="turn_page" data-page="<!-- tmpl_var last_page -->">&gt;&gt;</a></strong>
 
