--- a/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
@@ -103,12 +103,12 @@
 	
 	  </td>
 	
-	<td align="center">
+	<td style="text-align:center">
 		<!-- tmpl_include view_list_slide_nav_widget.tmpl -->
 	</td>
 
 	
-	<td align="right">
+	<td style="text-align:right">
 		<!-- tmpl_include list_search_form_widget.tmpl --> 
 	</td> 
 	
@@ -196,7 +196,7 @@
 	<!--/tmpl_if-->
 <!--/tmpl_if-->
 
-<td align="right">
+<td style="text-align:right">
 	<!-- tmpl_include list_download_widget.tmpl -->	
 </td>
 
