--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,8 +1,19 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
+<!-- tmpl_if comment --> 
 <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/dada_mail_admin_js.js" type="text/javascript"></script>
 <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/prototype.js" type="text/javascript"></script>
 <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/scriptaculous.js?load=effects" type="text/javascript"></script>
+<!-- /tmpl_if --> 
+
+<!-- jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+<script>
+	var $jq = jQuery.noConflict();
+</script> 
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
+
+
 <script type="text/javascript"> 
 		
 	 //<![CDATA[
