Small changes to make everything work. ish.

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -21,6 +21,11 @@ $ROOT_PASS_IS_ENCRYPTED   = '<!-- tmpl_var ROOT_PASS_IS_ENCRYPTED -->';
 
 # End Root Password
 
+$SUPPORT_FILES = { 
+	dir => '<!-- tmpl_var support_files_dir_path -->', 
+	url => '<!-- tmpl_var support_files_dir_url -->', 
+};
+
 
 # start cut for SQL Backend
 =cut
