--- a/dada/templates/list_activity.tmpl
+++ b/dada/templates/list_activity.tmpl
@@ -9,7 +9,9 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 <div id="list_activity"></div> 
-
+<form> 
+	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" />
+</form>
 
 <h1>Subscription Trends</h1> 
 <form>
