--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -9,7 +9,7 @@
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
-  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_DIR_URL -->/static/css/default.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/default.css" type="text/css" media="screen" />
 
 <!-- Google Visualization -->
 <script type="text/javascript" src="//www.google.com/jsapi"></script>
@@ -20,8 +20,8 @@
 	var $jq = jQuery.noConflict();
 </script> 
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
-<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/jquery.tablesorter.js"></script>
-<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_DIR_URL -->/static/css/jquery.ui.all.css">
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.tablesorter.js"></script>
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.ui.all.css">
 
 <!-- Google Visualization -->
 <script type="text/javascript">
@@ -29,7 +29,7 @@
 </script>
 
 <!-- Dada Mail's Admin Javascript -->
-<script src="<!-- tmpl_var SUPPORT_FILES_DIR_URL -->/static/javascripts/dada_mail_admin_js.js"         type="text/javascript"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail_admin_js.js"         type="text/javascript"></script>
 
 <!-- WYSIWYG Editors --> 
 <!-- tmpl_if load_wysiwyg_editor --> 
@@ -49,8 +49,8 @@
 <!-- tmpl_if load_modalbox --> 
 	 <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js"></script>
-	<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_DIR_URL -->/static/css/modalbox.css" type="text/css"  media="screen" />
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/modalbox.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
 
 
@@ -59,7 +59,7 @@
  <body id="DadaAdmin">
    <div id="Header">
 	<a href="<!-- tmpl_var PROGRAM_URL -->">
-		<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo.png/" alt="<!-- tmpl_var PROGRAM_NAME -->" />
+		<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->" />
     </a>
 	<span id="Title">
 		Logged in as
