Trying to make things look a little nicer and work, a little faster.

--- a/dada/static/css/default.css
+++ b/dada/static/css/default.css
@@ -932,10 +932,9 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 		padding:0px;*/
 }
 table.tablesorter thead tr .header {
-/*	background-image: url(bg.gif);
+	background-image: url(../images/jquery.tablesorter/bg.gif);
 	background-repeat: no-repeat;
 	background-position: center right;
-	*/
 	cursor: pointer;
 }
 table.tablesorter tbody td {
@@ -949,10 +948,10 @@ table.tablesorter tbody tr.odd td {
 	background-color:#ededed;
 }
 table.tablesorter thead tr .headerSortUp {
-	/*background-image: url(asc.gif);*/
+	background-image: url(../images/jquery.tablesorter/asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
-	/*background-image: url(desc.gif);*/
+	background-image: url(../images/jquery.tablesorter/desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
 background-color: #8dbdd8;
