--- a/dada/templates/list_activity.tmpl
+++ b/dada/templates/list_activity.tmpl
@@ -1,6 +1,7 @@
 <!-- begin list_activity --> 
 
 <!-- tmpl_set name="title" value="Membership &#187; Recent Activity" -->
+<!-- tmpl_set name="load_google_viz" value="1" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
