--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -1,4 +1,6 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Tracker" --> 
+<!-- tmpl_set name="load_google_viz" value="1" -->
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
