--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -125,7 +125,7 @@
  	
 
 	<style>
-	.ui-progressbar .ui-progressbar-value { background-image: url(http://localhost/images/pbar-ani.gif); }
+	.ui-progressbar .ui-progressbar-value { background-image: url(<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/jquery.ui/pbar-ani.gif); }
 	</style>
 	<div id="progressbarWrapper" style="width:500px;height:22px;margin-left:auto;margin-right:auto" class="ui-widget-default">
 	<div id="progressbar" style="height:100%;"></div>
