--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -212,7 +212,7 @@
 
 
 		<style>
-		.ui-progressbar .ui-progressbar-value { background-image: url(http://localhost/images/pbar-ani.gif); }
+		.ui-progressbar .ui-progressbar-value { background-image: url(<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/jquery.ui/pbar-ani.gif); }
 		</style>
 		<div id="show_progress" class="clearskiesbox">
 			<div id="progressbarWrapper" style="width:500px;height:22px;margin-left:auto;margin-right:auto" class="ui-widget-default">
