--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -11,11 +11,15 @@
  
   <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/default.css" type="text/css" media="screen" />
 
-<!-- Google Visualization -->
-<script type="text/javascript" src="//www.google.com/jsapi"></script>
+
+<!-- tmpl_if load_google_viz --> 
+	<!-- Google Visualization -->
+	<script type="text/javascript" src="//www.google.com/jsapi"></script>
+<!-- /tmpl_if --> 
 
 <!-- jQuery -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+<!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script><!-- /tmpl_if --> 
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
 <script>
 	var $jq = jQuery.noConflict();
 </script> 
@@ -23,16 +27,20 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.tablesorter.js"></script>
 <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.ui.all.css">
 
-<!-- Google Visualization -->
-<script type="text/javascript">
-	google.load('visualization', '1.1', {'packages':['corechart', 'geochart']});	
-</script>
+
+<!-- tmpl_if load_google_viz --> 
+	<!-- Google Visualization -->
+	<script type="text/javascript">
+		google.load('visualization', '1.1', {'packages':['corechart', 'geochart']});	
+	</script>
+<!-- /tmpl_if -->
 
 <!-- Dada Mail's Admin Javascript -->
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail_admin_js.js"         type="text/javascript"></script>
 
-<!-- WYSIWYG Editors --> 
+
 <!-- tmpl_if load_wysiwyg_editor --> 
+	<!-- WYSIWYG Editors --> 
 	<!-- tmpl_if using_fckeditor --> 
 		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js"       type="text/javascript"></script>
 	<!-- /tmpl_if -->
@@ -47,8 +55,8 @@
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if load_modalbox --> 
-	 <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js"></script>
+	<!-- ModalBox -->
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/prototype_scriptaculous_package.js"></script>
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/modalbox.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
