--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -2,6 +2,7 @@
 
 <!-- tmpl_set name="title" value="Membership &#187; View" -->
 <!-- tmpl_set name="load_modalbox" value="1" -->
+<!-- tmpl_set name="load_google_viz" value="1" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
